# habit_tracker

./: docker-compose.yml
backend/: Cargo.toml
backend/src/: app.rs  core.rs  main.rs  routes.rs
backend/src/core/: habits.rs  users.rs
backend/src/routes/: habits.rs  root.rs  state.rs
dataset/: init.sql
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: App.tsx
src/: main.rs
src/core/: habits.rs
src/routes/: root.rs
